--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@ body {
     /* Hidden by default */
     position: fixed;
     /* Fixed/sticky position */
-    bottom: 20px;
+    bottom: 4vh;
     /* Place the button at the bottom of the page */
-    right: 30px;
+    right: 4vw;
     /* Place the button 30px from the right */
     z-index: 99;
     /* Make sure it does not overlap */
@@ -31,7 +31,7 @@ body {
     /* Remove borders */
     outline: none;
     /* Remove outline */
-    background-color: red;
+    background-color: rgb(230, 135, 104);
     /* Set a background color */
     color: white;
     /* Text color */
@@ -39,14 +39,15 @@ body {
     /* Add a mouse pointer on hover */
     padding: 15px;
     /* Some padding */
-    border-radius: 10px;
+    border-radius: 8px;
     /* Rounded corners */
     font-size: 18px;
     /* Increase font size */
 }
 
 #myBtn:hover {
-    background-color: #555;
+    background-color: rgb(241, 203, 198);
+    color: black;
     /* Add a dark-grey background on hover */
 }
 
